# imageutilities

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ImageUtilitiesConfig.cmake  ImageUtilitiesLightConfig.cmake  README.md  annotated.html  classIuCudaException.html  classIuException.html  classes.html  classiu_1_1Image.html  classiu_1_1ImageCpu.html  classiu_1_1ImageGpu.html  classiu_1_1IuCudaTimer.html  classiu_1_1IuCufftException.html  classiu_1_1LinearDeviceMemory.html  classiu_1_1LinearHostMemory.html  classiu_1_1LinearMemory.html  classiu_1_1OpenCVSource.html  classiu_1_1OpenEXRInputFile.html  classiu_1_1OpenEXROutputFile.html  classiu_1_1PGRSource.html  classiu_1_1Qt5DisparitymapGpuWidget.html  classiu_1_1Qt5ImageGpuWidget.html  classiu_1_1Size.html  classiu_1_1SizeBase.html  classiu_1_1Size_3_012_01_4.html  classiu_1_1Size_3_013_01_4.html  classiu_1_1TensorCpu.html  classiu_1_1TensorGpu.html  classiu_1_1Vector.html  classiu_1_1VectorBase.html  classiu_1_1VideoSource.html  classiu_1_1Volume.html  classiu_1_1VolumeCpu.html  classiu_1_1VolumeGpu.html  classiuprivate_1_1ImageAllocatorCpu.html  classiuprivate_1_1ImageAllocatorGpu.html  classiuprivate_1_1VolumeAllocatorCpu.html  classiuprivate_1_1VolumeAllocatorGpu.html  (+155 more)
mex/: CMakeLists.txt  gpu_memsize_mex.m  mem_size_mex.cpp  mem_size_mex.m
src/: CMakeLists.txt  helper_math.h  iucontainers.h  iucore.cpp  iucore.h  iucoreippconnector.h  iucutil.h  iudefs.h  iufilter.cpp  iufilter.h  iugui.h  iuhelpermath.h  iuinteraction.cpp  iuinteraction.h  iuio.cpp  iuio.h  iuiopgm.cpp  iuiopgm.h  iuipp.cpp  iuipp.h  iuippdefs.h  iumath.cpp  iumath.cu  iumath.h  iumatlab.h  iumatlabconnector.cpp  iumatlabconnector.h  iumatlabsparseconnector.cpp  iumatlabsparseconnector.h  iupgrcamera.h  iupgrio.h  iupython.h  iusparse.cpp  iusparse.h  iutransform.cpp  iutransform.h  iuvideocapture.cpp  iuvideocapture.h  iuvideosource.h
src/common/: bind_textures.cuh  bsplinetexture_kernels.cuh  derivative_kernels.cuh  vectormath_kernels.cuh
src/connector/: image_ipp.h
src/core/: coredefs.h  image_allocator_cpu.h  image_allocator_npp.h  image_cpu.h  image_npp.h  linearhostmemory.h  memory_modification.cpp  memory_modification.cu  memory_modification.cuh
src/deprecated/: nppglwidget.cpp  nppglwidget.cuh  nppglwidget.h  nppglwidget_p.h
src/filter/: filter.cpp  filter.cuh
src/global/: globaldefs.h
src/gui/: nppglwidget.cpp  nppglwidget_p.h
src/io/: pgrcamera.cpp  pgrcameraimageconsumer.cpp  pgrcameraimageconsumer.h  pgrcameraimagegrabber.h  pgrcamerathreaddata.h
src/iuconnector/: copy_ipp.h  image_allocator_ipp.h  image_ipp.h  iumatlabconnector.h  matlabsparseconnector.h  memorydefs_ipp.h
src/iucore/: bsplinetexture_kernels.cuh  clamp.cpp  clamp.cu  clamp.h  convert.cpp  convert.cu  convert.h  copy.cpp  copy.cu  copy.h  coredefs.h  cudadefs.h  filter.cpp  filter.cu  filter.cuh  filter.h  filterbspline_kernels.cu  globaldefs.h  image.h  image_allocator_cpu.h  image_allocator_gpu.h  image_allocator_npp.h  image_cpu.h  image_gpu.h  imagepyramid.cpp  imagepyramid.h  iucoreapi.h  iutextures.cuh  iuvector.h  lineardevicememory.h  linearhostmemory.h  linearmemory.h  memory_modification.cpp  memory_modification.cu  memory_modification.cuh  memory_modification.h  memory_modification_kernels.cu  memorydefs.h  prolongate.cpp  prolongate.cu  (+21 more)
src/iufilter/: filter.cpp  filter.cu  filter.cuh  filter.h  filterbspline_kernels.cu
src/iugui/: QScienceSpinBox.cpp  QScienceSpinBox.h  image_cpu_display.cpp  image_cpu_display.h  image_cpu_display_p.h  images.qrc  imagewindow.cpp  imagewindow.h  iu_gui_images.qrc  iuguiapi.h  nppglwidget.cpp  nppglwidget.cu  nppglwidget.cuh  nppglwidget.h  overlay.h  plotgapwidget.cpp  plotgapwidget.h  qgl_image_gpu_widget.cpp  qgl_image_gpu_widget.cu  qgl_image_gpu_widget.h  qgl_image_gpu_widget_p.h  qglimagegpuwidget.cpp  qglimagegpuwidget.cu  qglimagegpuwidget.h  qt5disparitymapgpuwidget.cpp  qt5disparitymapgpuwidget.cu  qt5disparitymapgpuwidget.h  qt5imagegpuwidget.cpp  qt5imagegpuwidget.cu  qt5imagegpuwidget.h
src/iuinteraction/: draw.cpp  draw.cu  draw.h
src/iuio/: 1394camera.cpp  1394camera.h  1394source.cpp  1394source.h  imageio.cpp  imageio.h  imageiopgm.cpp  imageiopgm.h  iuioapi.h  iuvideosource.h  opencvsource.cpp  opencvsource.h  openexrio.cpp  openexrio.h  pgrcamera.h  pgrcameradata.h  pgrsource.cpp  pgrsource.h  videocapture.cpp  videocapture.h  videocapture_private.h  videocapture_threaded_bck.cpp  videocapture_threaded_bck.h  videocapturethread.cpp  videocapturethread.h  videofilesource.cpp  videofilesource.h  videosource.h
src/iuipp/: copy_ipp.h  image_allocator_ipp.h  image_cpu_to_ipp_connector.cpp  image_cpu_to_ipp_connector.h  image_ipp.h  image_ipp_to_cpu_connector.cpp  image_ipp_to_cpu_connector.h  memorydefs_ipp.h
src/iumath/: arithmetic.cpp  arithmetic.cu  arithmetic.cuh  arithmetic.h  arithmetics.cuh  complex.cuh  fft.cuh  fft_kernels.cuh  fftplan.h  iumathapi.h  statistics.cpp  statistics.cu  statistics.cuh  statistics.h  thrust_kernels.cuh  typetraits.h
src/iumatlab/: matlabconnector.h  matlabsparseconnector.h
src/iusparse/: sparsematrix_cpu.h  sparsematrix_gpu.h  sparsematrixdefs.h  sparsemultiplication.h  sparsesum.cpp  sparsesum.cu  sparsesum.cuh  sparsesum.h
src/iutransform/: cubictexture.cu  cubictexture_kernels.cu  prolongate.cpp  prolongate.cu  prolongate.h  reduce.cpp  reduce.cu  reduce.cuh  reduce.h  reduce_kernels.cu  remap.cpp  remap.cu  remap.h  transform.cu
src/math/: arithmetic.cpp  arithmetic.h  statistics.cu
src/ndarray/: CMakeLists.txt  Doxyfile  backup.h  common_transforms.cu  common_transforms.h  cuda_bug.cu  defines.h  dummy.cpp  error.cpp  error.h  error.kernel.h  error_cuda.h  intn.h  intn.h.orig  layout2D.m  mex_io.h  ndarray.cpp  ndarray.h  ndarray_example.cpp  ndarray_example.cu  ndarray_example.h  ndarray_io.h  ndarray_iterator.h  ndarray_iu.h  (+28 more)
tests/: CMakeLists.txt  config.h  config.h.cmake  iu_camera_unittest.cpp  iu_image_npp_unittest.cpp  iu_imagereader_unittest.cpp  iu_math_arithmetic_unittest.cpp  iu_statistics_npp_unittest.cpp  iu_unittests.cpp
(+194 files in other folders)
